Cambios Menores en la estetica

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="oscurecer"></div>
     <header id="header">
         <div class="menuMovil">
             <a id="excluirSubrayado" href="#info">
-                <div class="fondoLogo">
-                    <span class="logo"> Ki'ibok</span>
-                </div>
+                <span class="logo"> Ki'ibok</span>
             </a>
             <button id="menu-toggle"> ☰</button>
         </div>
@@ -46,7 +44,7 @@
                 
                 <div class="imageHero"></div>
                 <div class="heroContent">
-                    <h1>El poder de la aromaterapia en tu muñeca</h1>
+                    <h1>Aromas que cuidan, tecnología que conecta.</h1>
                     <h2>Consiguelo hoy</h2>
                     <div class="botones">
                         
