Cambios de logica en el slide

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                 </div>
                 <div class="contenedor sliderContainer" id="seccion2">
                     <div class="contenedor slider">
-                        <img src="img/placeHolderCuadrado.png" alt="placeholder">
-                        <img src="img/placeHolderCuadrado.png" alt="placeholder">
-                        <img src="img/placeHolderCuadrado.png" alt="placeholder">
+                        <img id="imagen1" src="img/sin1.jpg" alt="placeholder">
+                        <img id="imagen2" src="img/sin2.jpg" alt="placeholder">
+                        <img id="imagen3" src="img/sin3.jpg" alt="placeholder">
                     </div>
                     
                     <button id="prev">↑</button>
