Cambios al header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <header>
         <div class="menuMovil">
             <a href="#info" class="linkLogo" id="excluirSubrayado">
-                <div  class="logo">
+                <span  class="logo">
                     <img class="logoTexto" src="img/logoLetras.png" alt="Ki'ibok">
                     <img class="logoFondo" src="img/logoFondo.png" alt="Fondo del logo de Ki'ibok">
-                </div>
+                </span>
             </a>
             <button id="menu-toggle"> ☰</button>
         </div>
@@ -203,5 +203,6 @@
     </footer>
 
     <script src="js/slider.js"></script>
+    <script src="js/hamburguesa.js"></script>
 </body>
 </html>
