--- a/index.html
+++ b/index.html
@@ -204,5 +204,6 @@
 
     <script src="js/slider.js"></script>
     <script src="js/hamburguesa.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
