Cambios al Slider

--- a/index.html
+++ b/index.html
@@ -96,9 +96,18 @@
                 </div>
                 <div class="contenedor sliderContainer" id="seccion2">
                     <div class="contenedor slider">
-                        <img id="imagen1" src="img/sin1.jpg" alt="placeholder">
-                        <img id="imagen2" src="img/sin2.jpg" alt="placeholder">
-                        <img id="imagen3" src="img/sin3.jpg" alt="placeholder">
+                        <div class="capsulaSlider">
+                            <h2 class="textoCapsulas">Efectos secundarios de las medicinas: Las medicinas pueden causar efectos como náuseas y mareos.</h2>
+                            <img id="imagen1" src="img/sin1.jpg" alt="placeholder">
+                        </div>
+                        <div class="capsulaSlider">
+                            <h2 class="textoCapsulas">El ruido y la sobrecarga sensorial causan dolores de cabeza.</h2>
+                            <img id="imagen2" src="img/sin2.jpg" alt="placeholder">
+                        </div>
+                        <div class="capsulaSlider">
+                            <h2 class="textoCapsulas">La contaminación deja un olor desagradable en el aire.</h2>
+                            <img id="imagen3" src="img/sin3.jpg" alt="placeholder">
+                        </div>
                     </div>
                     
                     <button id="prev">↑</button>
