--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
                     <div class="container logo-container">
                         <img src="assets/logoFondo.webp" alt="Fondo del logo de Ki'ibok">
                         <img src="assets/logoLetras.webp" alt="Logo de Ki'ibok">
+                        <div class="sombra"></div>
                     </div>
                     <h1>Ki'ibok</h1>
                     <h2>COLLECTION</h2>
-                    <p>
+                    <p class="negritas">
                         Combinamos la suavidad de la aromaterapia con la conciencia ecológica para brindarte un 
                         instante de calma y conexión con el planeta. 
                         ¡Siéntete parte de un cambio positivo cada vez que la uses!
                     </p>
-                    <a href="" class="btn">COMPRAR AHORA</a>
+                    <a href="" class="btn raise">COMPRAR AHORA</a>
                 </div>
                 <div class="container columna2">
                     <img src="./assets/Pulsera.webp" alt="Pulsera ki'ibok">
@@ -85,33 +86,33 @@
             </div>
             <div class="container contenido">
                 <div class="container tarjetaVenta">
-                    <img src="" alt="">
-                    <p>Producto</p>
-                    <p>Precio</p>
+                    <img src="assets/istockphoto-1327766066-612x612.webp" alt="Jabon">
+                    <p class="negritas">Jabon de aceite de oliva</p>
+                    <p>$5.00</p>
 
-                    <a href="">Agregar al carrito</a>
+                    <a class="close" href="">Agregar al carrito</a>
                 </div>
                 <div class="container tarjetaVenta">
                     <img src="assets/jabonRosa.webp" alt="Un jabon Rosa">
-                    <p>Producto</p>
-                    <p>Precio</p>
+                    <p class="negritas">Jabon organico</p>
+                    <p>$5.00</p>
 
-                    <a href="">Agregar al carrito</a>
+                    <a class="close" href="">Agregar al carrito</a>
                 </div>
                 <div class="container tarjetaVenta">
-                    <img src="" alt="">
-                    <p>Producto</p>
-                    <p>Precio</p>
+                    <img src="assets/glycerin_soap.webp" alt="Jabon de glicerina">
+                    <p class="negritas">Jabon de glicerina</p>
+                    <p>$5.00</p>
 
-                    <a href="">Agregar al carrito</a>
+                    <a class="close" href="">Agregar al carrito</a>
                 </div>
                 
                 <div class="container tarjetaVenta">
-                    <img src="" alt="">
-                    <p>Producto</p>
-                    <p>Precio</p>
+                    <img src="assets/oil_soap.webp" alt="Un jabon de aceite">
+                    <p class="negritas">Jabon de aceite</p>
+                    <p>$5.00</p>
 
-                    <a href="">Agregar al carrito</a>
+                    <a class="close" href="">Agregar al carrito</a>
                 </div>
             </div>
         </section>
@@ -190,7 +191,7 @@
                         
                         <textarea id="mensaje" name="mensaje" placeholder="MENSAJE"></textarea>
                     </div>
-                    <button type="submit" class="btn-submit">ENVIAR</button>
+                    <button type="submit" class="btn-submit pulse">ENVIAR</button>
                 </form>
             </div>
         </section>
