--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
             </div>
         </section>
 
+        <section class="beneficios2">
+            <div class="container logo-container">
+                <img src="assets/logoFondo.webp" alt="Fondo del logo de Ki'ibok">
+                <img src="assets/logoLetras.webp" alt="Logo de Ki'ibok">
+                <div class="textAdicional">
+                    <h1>
+                        Beneficios
+                    </h1>
+                </div>
+                
+            </div>
+            <img class="beneficios2Img" src="assets/beneficios.webp" alt="Beneficios de la pulsera Ki'ibok">
+            
+        </section>
         <section class="Beneficios">
             <div class="container logo-container">
                 <img src="assets/logoFondo.webp" alt="Fondo del logo de Ki'ibok">
@@ -61,7 +75,7 @@
                         </p>
                     </div>
                     <div class="container tarjeta">
-                        <img src="" alt="">
+                        <img src="assets/idea.webp" alt="">
                         <h3>Descubra los beneficios</h3>
                         <p>
                             Nuestra pulsera, equipada con tecnología NFC, 
@@ -72,9 +86,12 @@
                         </p>
                     </div>
                     <div class="container tarjeta">
-                        <img src="" alt="">
-                        <h3></h3>
-                        <p></p>
+                        <img src="assets/arbol.webp" alt="">
+                        <h3>Lo mejor del pasado y el futuro</h3>
+                        <p>
+                            La aromaterapia tiene raíces milenarias: ya en el Antiguo Egipto, Grecia e India se usaban aceites esenciales para rituales, belleza y salud.
+                            Hoy, esta sabiduría ancestral se une con la ciencia moderna para brindarte bienestar físico y emocional a través del aroma natural de las plantas.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -124,24 +141,24 @@
             </div>
             <div class="container tarjetas">
                 <div class="container tarjetaReseña">
-                    <p>Texto Reseña</p>
-                    <p>Nombre</p>
+                    <p>MUY LINDO :3</p>
+                    <p class="negritas">Mary Sue</p>
                 </div>
                 <div class="container tarjetaReseña">
-                    <p>Texto Reseña</p>
-                    <p>Nombre</p>
+                    <p>Combina con mi estilo</p>
+                    <p class="negritas">Gary Stu</p>
                 </div>
                 <div class="container tarjetaReseña">
-                    <p>Texto Reseña</p>
-                    <p>Nombre</p>
+                    <p>COOL!!</p>
+                    <p class="negritas">Chosen Chad </p>
                 </div>
                 <div class="container tarjetaReseña">
-                    <p>Texto Reseña</p>
-                    <p>Nombre</p>
+                    <p>Me gusta su calidad</p>
+                    <p class="negritas">Toughie Tasha </p>
                 </div>
                 <div class="container tarjetaReseña">
-                    <p>Texto Reseña</p>
-                    <p>Nombre</p>
+                    <p>Super relajante</p>
+                    <p class="negritas">Magic Molly</p>
                 </div>
             </div>
         </section>
